# Lantern

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: development_plan.md  device_registry.md  ideas.md  implementation_plan.md  roadmap.md  technical_implementation_plan.md  test_plan.md
src/lantern/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py
src/lantern/core/: __init__.py  context.py  executor.py  output.py
src/lantern/models/: __init__.py  network.py
src/lantern/services/: __init__.py  device_id.py  http_server.py  oui.py  qr.py  wol.py
src/lantern/services/control/: __init__.py  base.py  discovery.py
src/lantern/services/control/adapters/: __init__.py  roku.py
src/lantern/services/control/protocols/: __init__.py  upnp.py
src/lantern/services/smart_plugs/: __init__.py  kasa.py
src/lantern/tools/: __init__.py  control.py  devices.py  diagnose.py  dns.py  drop.py  interfaces.py  plug.py  port.py  qr.py  router.py  scan.py  serve.py  services.py  share.py  sonar.py  ssh.py  wake.py  whoami.py
src/lantern/tools/wifi/: __init__.py  info.py  scan.py  signal.py
src/lantern/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/macos/: airport_info.txt  airport_scan.txt  arp_table.txt  networksetup_ports.txt  ping_output.txt  route_default.txt  scutil_dns.txt  system_profiler_wifi.txt
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_config.py  test_executor.py  test_http_server.py  test_macos_adapter.py  test_models.py  test_output.py  test_qr.py  test_version.py  test_wol.py
