[project]
name = "lantern-net"
version = "0.1.0"
description = "A powerful network toolkit for developers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Shubham Upadhyay"}
]
keywords = ["network", "cli", "diagnostics", "wifi", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

dependencies = [
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "qrcode>=7.4.0,<8.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
power = [
    "python-kasa>=0.6.0",
    "httpx>=0.27.0",
]
all = [
    "lantern-net[dev,power]",
]

[project.scripts]
lantern = "lantern.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lantern"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["lantern"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/lantern"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --cov=lantern --cov-report=term-missing"

[tool.coverage.run]
source = ["src/lantern"]
omit = [
    "src/lantern/platforms/linux.py",
    "src/lantern/platforms/windows.py",
    "src/lantern/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
branch = true
